update the style.css file withsome media queries to make sure the project looks good on mobile devices

--- a/style.css
+++ b/style.css
@@ -32,3 +32,148 @@ div.main {
     width: 60%;
   }
 }
+@media screen and (min-width: 900px) {
+  div.main {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  div.main {
+    width: 40%;
+  }
+}
+
+div.header {
+  font-family: "Grandstander", cursive;
+  background-color: greenyellow;
+  flex-basis: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px 10px 0 0;
+}
+
+.header h2 {
+  font-weight: 600;
+  letter-spacing: 1.3px;
+  color: white;
+  text-shadow: 0 0 4px black;
+  font-size: 40px;
+}
+.header p {
+  text-shadow: 0 0 1px white;
+}
+section.calculation {
+  font-family: "Grandstander", cursive;
+  background-color: hotpink;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 0 0 10px 10px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  margin-left: 10px;
+}
+input,
+select {
+  font-family: "Grandstander", cursive;
+  margin-top: 12px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px 5px;
+  outline: none;
+  font-size: 18px;
+  width: 50%;
+  border: none;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9);
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  text-align: center;
+  border-radius: 8px;
+}
+@media screen and (max-width: 600px) {
+  input,
+  select {
+    width: 70%;
+  }
+}
+select#tip {
+  text-align-last: center;
+}
+button {
+  font-family: "Grandstander", cursive;
+  width: 30%;
+  margin: 0 auto;
+  padding: 10px 0;
+  background-color: greenyellow;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  box-shadow: 0 0 3px 2px white;
+  font-size: 16px;
+  text-shadow: 0 0 2px white;
+  cursor: pointer;
+}
+
+.boxMessage {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  width: 90%;
+  height: 35%;
+  transform: translate(-50%, -120%);
+  border-radius: 10px;
+  background-color: hotpink;
+  box-shadow: 0 0 3px 2px white;
+  display: flex;
+  align-items: center;
+  max-width: 800px;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 110;
+  transition: 0.4s ease-out;
+}
+@media screen and (min-width: 600px) {
+  .boxMessage {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .boxMessage {
+    width: 60%;
+  }
+}
+.active {
+  transform: translate(-50%, 50%);
+}
+
+.boxMessage p {
+  font-family: "Grandstander", cursive;
+  font-size: 1.2rem;
+}
+
+.boxMessage p span {
+  color: greenyellow;
+}
+
+.modal {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+}
+
+.modal.back-drop {
+  display: block;
+}
